--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -1,5 +1,35 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.clearfix::after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.q2__content {
+  width: 900px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #eff3f4;
+}
+
+.q2__content__leftbox img {
+  float: left;
+  margin-right: 20px;
+  margin-bottom: 10px;
+}
+
+.q2__content__rightbox img{
+  float: right;
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
+
+.q2__content__text{
+  font-size: 18px;
+  line-height: 22px;
+  word-break: break-all;
+}
 
 /* 回答はここに書いてね */
