--- a/layout_parts/q5/css/style.css
+++ b/layout_parts/q5/css/style.css
@@ -1,5 +1,96 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.q5__content {
+  width: 500px;
+  height: 500px;
+  margin: 0 auto;
+  position: relative;
+  background-color: #ECF1F2;
+}
 
+.colorBox{
+  font-size: 30px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  position: absolute;
+}
+
+
+.box1 {
+  top: 40px;
+  left: 200px;
+  z-index: 1;
+  background-color: #ffefd3;
+}
+
+.box2 {
+  top: 120px;
+  right: 120px;
+  z-index: 2;
+  background-color: #7084de;
+}
+
+.box3 {
+  top: 200px;
+  right: 40px;
+  z-index: 3;
+  background-color: #d0ecea;
+}
+
+.box4 {
+  bottom: 120px;
+  right:120px;
+  z-index: 4;
+  background-color: #8b7a5e;
+}
+
+.box5 {
+  bottom: 40px;
+  right: 200px;
+  z-index: 5;
+  background-color: #9fd6d2;
+}
+
+.box6 {
+  bottom: 120px;
+  left: 120px;
+  z-index: 6;
+  background-color: #fffee4;
+}
+
+.box7 {
+  top: 200px;
+  left: 40px;
+  z-index: 7;
+  background-color: #deae70;
+}
+
+.box8 {
+  top: 120px;
+  left: 120px;
+  z-index: 8;
+  background-color: #de70cf;
+}
+
+.box8::after{
+  position: absolute;
+  content: '';
+  top: 0;
+  right: 0;
+  width: 20px;
+  height: 20px;
+  background-color: #ffefd3;
+}
+
+.box9 {
+  top: 10px;
+  left: 10px;
+  position: fixed;
+  background-color: #2b69a3;
+}
 /* 回答はここに書いてね */
