--- a/layout_parts/q6/css/style.css
+++ b/layout_parts/q6/css/style.css
@@ -2,4 +2,80 @@
 
 /* 回答はここに書いてね */
 
-/* 回答はここに書いてね */
+/* Q6-1 左右中央寄せ */
+
+.align {
+  text-align: center;
+}
+
+.align p {
+  width: 90px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  display: inline-block;
+  background-color: #e6f2ff;
+}
+
+.margin {
+  width: 90px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: center;
+  margin: 0 auto;
+  background-color: #e6f2ff;
+}
+
+/* Q6-2 天地左右中央寄せ */
+
+.q6--around__table {
+  display: table;
+  width: 100%;
+  height: 100%;
+}
+
+.q6--around__element {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.q6--around__element p {
+  display: inline-block;
+  background-color: #fff;
+  padding: 10px;
+}
+
+.q6--around {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.q6--around p {
+  background-color: #fff;
+  padding: 10px;
+}
+
+.is-stable {
+  position: relative;
+}
+
+.stable {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+}
+
+.is-flexible {
+  position: relative;
+}
+
+.flexible {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
