--- a/layout_parts/q10/css/style.css
+++ b/layout_parts/q10/css/style.css
@@ -1,5 +1,36 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.q10 {
+  position: relative;
+  display: inline-block;
+  padding: 20px;
+  width: 500px;
+  font-size: 16px;
+  border: solid 5px #222;
+  line-height: 16px;
+  border-radius: 30px;
+}
 
+.q10:before {
+  content: "";
+  position: absolute;
+  bottom: -19%;
+  left: 10%;
+  margin-left: -13px;
+  border: 15px solid transparent;
+  border-top: 15px solid #fff;
+  z-index: 2;
+}
+
+.q10:after {
+  content: "";
+  position: absolute;
+  bottom:-40px;
+  left: 10%;
+  margin-left: -17px;
+  border: 19px solid transparent;
+  border-top: 19px solid #222;
+  z-index: 1;
+}
 /* 回答はここに書いてね */
