--- a/layout_parts/q7/css/style.css
+++ b/layout_parts/q7/css/style.css
@@ -2,4 +2,99 @@
 
 /* 回答はここに書いてね */
 
+/* Q7-1 floatでの横並び */
+
+.float_clearfix::after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.float_box {
+  width: 225px;
+  margin-right: 50px;
+  font-size: 16px;
+  float: left;
+  box-sizing:border-box;
+}
+
+.float_box:nth-child(2n) {
+  margin-right: 0;
+}
+
+/* Q7-2 tableでの横並び */
+
+.table_inner {
+  display: table;
+}
+
+.table_box {
+  display: table-cell;
+  width: 225px;
+  padding-right: 50px;
+  font-size: 16px;
+  vertical-align: middle;
+}
+
+.table_box:nth-child(2n) {
+  padding-right: 0;
+}
+
+/* Q7-3 inline-blockでの横並び */
+
+.inline-block_inner {
+  font-size: 0;
+}
+
+.inline-block_box {
+  display: inline-block;
+  width: 225px;
+  margin-right: 50px;
+  font-size: 16px;
+  vertical-align: middle;
+  box-sizing:border-box;
+}
+
+.inline-block_box:nth-child(2n) {
+  margin-right: 0;
+}
+
+/* Q7-4 flexでの横並び */
+
+.flex_inner {
+  display: flex;
+  justify-content: space-around;
+}
+
+.flex_box {
+  width: 225px;
+  font-size: 16px;
+  box-sizing:border-box;
+  align-self: flex-end;
+}
+
+/* Q7-5 inline-blockとmarginでの横並び  */
+
+.clearfix::after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.is-stable {
+  display: inline-block;
+  width: 300px;
+  font-size: 16px;
+  vertical-align: middle;
+  box-sizing:border-box;
+}
+
+.is-flexible {
+  float: right;
+  width: 100%;
+  margin-left: -300px;
+  padding-left: 350px;
+  box-sizing: border-box;
+}
+
 /* 回答はここに書いてね */
