--- a/layout_parts/q9/css/style.css
+++ b/layout_parts/q9/css/style.css
@@ -1,5 +1,64 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.q9__transition {
+  position: relative;
+  width: 500px;
+  height: 333px;
+  margin: 0 auto;
+  overflow: hidden;
+  cursor: pointer;
+}
 
+.q9__src {
+  transition: all .5s;
+}
+
+.q9__transition__box {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  bottom: -100%;
+  left: 0;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .8));
+  transition: all .5s;
+}
+
+.q9__transition:hover .q9__src {
+  transform: scale(1.5);
+}
+
+.q9__transition:hover .q9__transition__box {
+  bottom: 0;
+}
+
+.q9__transition__text {
+  position: absolute;
+  width: 100%;
+  padding: 20px;
+  bottom: 0;
+  left: 0;
+  color: #FFF;
+  box-sizing: border-box;
+  word-break: break-all;
+}
+
+.q9__loading {
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  border: 10px solid #ECF1F2;
+  border-top-color: #00BCD4;
+  border-radius: 50%;
+  animation: loading 1.1s infinite linear;
+}
+
+@keyframes loading {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 /* 回答はここに書いてね */
