--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -14,19 +14,19 @@
   background-color: #eff3f4;
 }
 
-.q2__content__leftbox img {
+.q2__leftbox img {
   float: left;
-  padding-right: 20px;
-  padding-bottom: 10px;
+  margin-right: 20px;
+  margin-bottom: 10px;
 }
 
-.q2__content__rightbox img{
+.q2__rightbox img{
   float: right;
-  padding-left: 20px;
-  padding-bottom: 10px;
+  margin-left: 20px;
+  margin-bottom: 10px;
 }
 
-.q2__content__text{
+.q2__text{
   font-size: 18px;
   line-height: 22px;
   word-break: break-all;
