--- a/layout_parts/q4/css/style.css
+++ b/layout_parts/q4/css/style.css
@@ -1,56 +1,53 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.q4 { 
+  padding: 20px;
+  box-sizing: border-box;
+}
 
-.q4_box {
+.q4__contents {
   display: table;
   box-sizing: border-box;
-  padding: 20px;
+  margin-top: 20px; 
   width: 100%;
+  background-color: #ECF1F2;
+}
+
+.q4__contents:first-child {
+  margin-top: 0;
+}
+
+.q4__cell {
+  display: table-cell;
+  padding: 20px;
+  text-align: center;
 }
 
 .orange {
-  display: table-cell;
   background-color: #fdc8b8;
   width: 100px;
-  padding: 20px 0;
-  text-align: center;
 }
 
 .pink {
-  display: table-cell;
   background-color: #e0abd9;
-  padding: 20px 0;
-  text-align: center;
 }
 
 .blue {
-  display: table-cell;
   background-color: #b6d8ed;
   width: 100px;
-  padding: 20px 0;
-  text-align: center;
 }
 
 .yellow {
-  display: table-cell;
   background-color: #e5d32e;
-  padding: 20px 0;
-  text-align: center;
 }
 
 .red {
-  display: table-cell;
   background-color: #ec8f9a;
-  padding: 20px 0;
-  text-align: center;
 }
 
 .green {
-  display: table-cell;
   background-color: #8fdcad;
   width: 500px;
-  padding: 20px 0;
-  text-align: center;
 }
 /* 回答はここに書いてね */
