Q8 ボタンの共通CSSをまとめる

--- a/layout_parts/q8/css/style.css
+++ b/layout_parts/q8/css/style.css
@@ -22,53 +22,11 @@
   line-height: 26px;
 }
 
-.common_small {
-  color: #ffffff;
-  background-color: #00bcd4;
-}
-
-.error_small { 
-  color: #ffffff;
-  background-color: #ff4081;
-}
-
-.disabled_small {
-  color: #ffffff;
-  background-color: #e5e5e5;
-}
-
-.shadow_small {
-  color: #222;
-  background-color: #ffffff;
-  box-shadow: 0 1px 6px rgba(0, 0, 0, .12), 0 1px 4px rgba(0, 0, 0, .12);
-}
-
 .middle {
   border-radius: 5px;
   font-size: 20px;
   padding: 0 20px;
   line-height: 32px;
-}
-
- .common_middle {
-  color: #ffffff;
-  background-color: #00bcd4;
-}
-
-.error_middle { 
-  color: #ffffff;
-  background-color: #ff4081;
-}
-
-.disabled_middle {
-  color: #ffffff;
-  background-color: #e5e5e5;
-}
-
-.shadow_middle {
-  color: #222;
-  background-color: #ffffff;
-  box-shadow: 0 1px 6px rgba(0, 0, 0, .12), 0 1px 4px rgba(0, 0, 0, .12);
 }
 
 .large {
@@ -78,22 +36,22 @@
   line-height: 38px;
 }
 
- .common_large {
+.common_btn {
   color: #ffffff;
   background-color: #00bcd4;
 }
 
-.error_large { 
+.error_btn { 
   color: #ffffff;
   background-color: #ff4081;
 }
 
-.disabled_large {
+.disabled_btn {
   color: #ffffff;
   background-color: #e5e5e5;
 }
 
-.shadow_large {
+.shadow_btn {
   color: #222;
   background-color: #ffffff;
   box-shadow: 0 1px 6px rgba(0, 0, 0, .12), 0 1px 4px rgba(0, 0, 0, .12);
