--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -14,19 +14,20 @@
   background-color: #eff3f4;
 }
 
-.q2__leftbox img {
-  float: left;
+.q2__box {
+  margin-bottom: 10px;
+}
+
+.left {
   margin-right: 20px;
-  margin-bottom: 10px;
+  float: left;
 }
 
-.q2__rightbox img{
-  float: right;
+.right {
   margin-left: 20px;
-  margin-bottom: 10px;
+  float: right;
 }
-
-.q2__text{
+.q2__text {
   font-size: 18px;
   line-height: 22px;
   word-break: break-all;
