--- a/layout_parts/q10/css/style.css
+++ b/layout_parts/q10/css/style.css
@@ -7,14 +7,15 @@
   width: 500px;
   border: solid 5px #222;
   border-radius: 30px;
+  margin: 0 auto;
 }
 
 .q10:before {
   content: "";
   position: absolute;
   bottom: -19%;
-  left: 10%;
-  margin-left: -13px;
+  left: 10.8%;
+
   border: 15px solid transparent;
   border-top: 15px solid #fff;
   z-index: 2;
@@ -25,7 +26,7 @@
   position: absolute;
   bottom:-40px;
   left: 10%;
-  margin-left: -17px;
+
   border: 19px solid transparent;
   border-top: 19px solid #222;
   z-index: 1;
